# railload_robot

./: .gitignore  Dockerfile  README.md
railload_robot/: CMakeLists.txt  package.xml
railload_robot/desktop/: autostart.sh  robot.desktop
railload_robot/rules/: 39-motor_driver.rules
railload_robot_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
railload_robot_bringup/config/: vlp16.yaml
railload_robot_bringup/launch/: camera.launch.py  robot.launch.py  velodyne_driver.launch.py  yolo.launch.py
railload_robot_bringup/railload_robot_bringup/: Lidar.py  driving.py  driving.test.py  joystick_command.py  keyboard_command.py  rpm_calculate.py  tracker.py  tracker_test.py
railload_robot_description/: CMakeLists.txt  package.xml
railload_robot_description/launch/: display.launch.py  gazebo.launch.py
railload_robot_description/rviz/: display.rviz
railload_robot_description/urdf/: common_inertia.urdf.xacro  railload_robot.urdf.xacro  railload_robot_properties.urdf.xacro  test.urdf
railload_robot_description/urdf/robot/: base.urdf.xacro  color.gazebo.xacro  differential_drive.gazebo.xacro  wheel.urdf.xacro
railload_robot_description/urdf/sensors/: VLP-16.urdf.xacro
railload_robot_description/worlds/: empty.world  test.world
