<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>railload_robot</name>
	<version>0.0.0</version>
	<description>
		ROS packages for the railload_robot (meta package)
	</description>
    <maintainer email="yeonso981@naver.com">yeonsoo98</maintainer>

    <license>Apache 2.0</license>
	<url type="website">cwsfa.co.kr</url>
    <url type="repository">https://github.com/cwsfa/railload_robot</url>
    <url type="bugtracker">https://github.com/cwsfa/railload_robot/issues</url>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>