<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>railload_robot_bringup</name>
    <version>0.0.0</version>
    <description>The railload_robot bringup package</description>
    <maintainer email="yeonso981@naver.com">yeonsoo98</maintainer>
    <license>Apache 2.0</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>joy_linux</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>realsense2_camera</exec_depend>
    <exec_depend>realsense2_description</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>